# XgenConfig

./: .env.sample  .gitignore  main.py  pyproject.toml  test_config_utils.py
config/: README.md  __init__.py  base_config.py  config_composer.py
config/sub_config/: __init__.py  anthropic_config.py  app_config.py  database_config.py  document-processor_config.py  embedding_config.py  gemini_config.py  guarder_config.py  llm_config.py  mlflow_config.py  node_config.py  openai_config.py  sgl_config.py  stt_config.py  trainer_config.py  tts_config.py  vast_config.py  vectordb_config.py  vllm_config.py  workflow_config.py
controller/: appController.py
controller/helper/: singletonHelper.py
controller/helper/utils/: __init__.py  auth_helpers.py  data_parsers.py  llm_evaluators.py  workflow_helpers.py
service/: config_utils.py  redis_config_manager.py
